----------------------------------------------------------------------
 OmegaT 2.2.0 update 4 
----------------------------------------------------------------------
  1 Enhancement
  0 Bugfix
----------------------------------------------------------------------
2.2.0 update 4 vs. 2.2.0 update 3

  Other enhancements:

  - Russian localisation updated to 2.2.0 (UI, Instant Start, Readme)

----------------------------------------------------------------------
 OmegaT 2.2.0 update 3 
----------------------------------------------------------------------
  5 Enhancements
  0 Bugfix
----------------------------------------------------------------------
2.2.0 update 3 vs. 2.2.0 update 2

  Implemented requests:

  - Remove extra spaces added around tags by Google Translate
  http://sourceforge.net/support/tracker.php?aid=2956989

  Other enhancements:

  - Polish localisation updated to 2.1.3 (UI, Instant Start, Readme, documentation)
  - Brazilian Portuguese localisation updated to 2.2.0 (UI, Instant Start, Readme)

  - Hunspell updated to 1.2.12

  - The "HTML and XHTML files segmentation" segmentation rule has been renamed 
to "HTML, XHTML and ODF segmentation"

----------------------------------------------------------------------
 OmegaT 2.2.0 update 2 
----------------------------------------------------------------------
  1 Enhancement
  2 Bugfixes
----------------------------------------------------------------------
2.2.0 update 2 vs. 2.2.0 update 1

  Other enhancements:

  - Italian localisation updated to 2.2.0 update 1 (UI, Instant Start, Readme, documentation)

  Bug fixes:

  - HTML filter: Entities from attributes were not converted to 
characters. This applied also to the HTML Help Compiler Filter.

  - MT using Google fails to give results in Traditional Chinese
  http://sourceforge.net/support/tracker.php?aid=3086757

----------------------------------------------------------------------
 OmegaT 2.2.0 update 1 